Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106481

PrincipledMaterial clearcoat shader error with no lights

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.4
    • 6.4.0 Beta4
    • Quick: 3D
    • None
    • d19ae6827470735cac5d9bc059b9ab4521995a18

    Description

      (This bug appears with car-configurator demo, created here a simplified way to reproduce)

      Getting following shader error with the attached tester app:

       

      "ERROR: :360: 'qt_schlick3' : no matching overloaded function found \nERROR: :360: '=' : cannot convert from ' const float' to ' temp highp 3-component vector of float'\nERROR: :360: '' : compilation terminated \nERROR: 3 compilation errors. No code generated."
      

      Reason appears to be using clearcoatAmount > 0, while the scene doesn't (yet) have a light.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes