Make sure qt_schlick3 exists

In cases where scene doesn't (yet) contain a light, we may end up into
this code path without bsdf.glsllib already included.

Task-number: QTBUG-106481
Change-Id: Ie812582b0c59bddec797fc878a7ad6db1c5006ac
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit f175054e9d207bd89e1c108ccfe287d64c3cc16d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>